<resources>
    <string name="app_name">Emotion Diary</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_timeLine">Time Line</string>
    <string name="title_myPage">My Page</string>
    <string name="answer">Answer</string>
    <string name="diary_write_title">Diary Write</string>
    <string name="current_date">날짜</string>

    <string name="Taro">타로카드제목</string>

    <string name="show_previous_month_text">show previous month</string>
    <string name="show_next_month_text">show next month</string>
    <string name="pencil_outline_description">pencil outline</string>
    <string name="tarot_card">taro card image</string>
    <string name="taro_background">TaroBackground</string>
    <string name="time_information_text">25일 중 오전 11시가 가장 활발했어요!</string>
    <string name="preview_text">요약 보기</string>
    <string name="write_rate_text">30일 중 총 25일\n일기를 작성하셨어요!</string>
    <string name="nextButton_text">다음</string>
    <string name="year_month_text">2025년 6월</string>
    <string name="written_diary_text">작성된 일기: 5개</string>
    <string name="year_month_day_day_of_week_text">2025.6.1 SUN</string>
    <string name="dayNum_text">01</string>
    <string name="emotion_message_text">오늘의 감정을 기록해보세요 ✍️</string>
    <string name="collecting_date_text">데이터 수집중입니다</string>
    <string name="diary_title_text">Emotion Diary</string>
    <string name="diary_explain_text">오늘의 감정을\n카드에 담아보세요</string>
    <string name="startButton_text">시작하기</string>
    <string name="no_nickName_text">닉네임 없음</string>
    <string name="diary_entry_rate_text">🔥 24일째 일기 작성중 🔥</string>
    <string name="change_nickname_text">닉네임 변경</string>
    <string name="change_profile_text">프로필 변경</string>
    <string name="change_alarm_time_text">알림시간 변경</string>
    <string name="pauseButton_text">취소</string>
    <string name="checkButton_text">확인</string>
    <string name="collecting_data_text">데이터 수집중입니다</string>
    <string name="year_month_day_text">2024년 6월 1일</string>
    <string name="record_emotion_text">오늘의 감정을 기록해보세요</string>
    <string name="creation_rate_of_month_text">이번 달 기록률: 82%</string>
    <string name="show_title_text">제목이 여기에 표시됩니다</string>
    <string name="preview_that_date_text">해당 날짜의 일기 미리보기 내용이 여기에 들어갑니다.</string>
    <string name="monthly_statistics_text">월별 통계</string>
    <string name="yearly_statistics_text">연도별 통계</string>
    <string name="view_time_zone_emotion_text">시간대 감정 보기</string>
    <string name="main_greeting_text">WELCOME :)</string>
    <string name="show_nickName_greeting_text">닉네임님, 반가워요!</string>
    <string name="title_hint">제목</string>
    <string name="content_hint">내용을 입력하세요</string>
    <string name="selectEmotion_text">감정 선택</string>
    <string name="resultButton_text">결과 보기</string>
    <string name="taro_card_text">Taro Card</string>
    <string name="set_your_avatar_text">Set Your Avatar</string>
    <string name="enter_your_nickname_hint">Enter your nickname</string>
    <string name="gender_text">Gender</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="birth_date_text">Birth date</string>
    <string name="slash_text">/</string>
    <string name="sendButton_text">Send</string>

</resources>