<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/concon"
        android:text="@string/set_your_avatar_text"
        android:textSize="24sp"
        android:textColor="?attr/colorOnSurface" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@drawable/avatar" />

    <EditText
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_nickname_hint"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:textColor="?attr/colorOnSurface"
        android:backgroundTint="?attr/colorPrimary"
        android:textColorHint="?attr/colorOnSurface" />

    <RadioGroup
        android:id="@+id/radGender"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_text"
            android:textSize="20sp"
            android:textColor="?attr/colorOnSurface" />

        <RadioButton
            android:id="@+id/genderM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_text"
            android:textColor="?attr/colorOnSurface" />

        <RadioButton
            android:id="@+id/genderF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female_text"
            android:textColor="?attr/colorOnSurface" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/birth_date_text"
        android:textSize="20sp"
        android:textColor="?attr/colorOnSurface" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <NumberPicker
            android:id="@+id/yearPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="4dp"
            android:text="@string/slash_text"
            android:textSize="20sp"
            android:textColor="?attr/colorOnSurface" />

        <NumberPicker
            android:id="@+id/monthPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:gravity="center"
            android:text="@string/slash_text"
            android:textSize="20sp"
            android:textColor="?attr/colorOnSurface" />

        <NumberPicker
            android:id="@+id/dayPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sendButton_text"
        android:textColor="?attr/colorOnPrimary"
        android:backgroundTint="?attr/colorPrimary" />
</LinearLayout>
